@@ -20,6 +20,7 @@ this repository contains the full copyright notices and license terms. -->
         <field name="product"/>
         <label name="manual"/>
         <field name="manual"/>
+        <button string="Cancel payment" name="cancel_payment" xexpand="0"/>
     </group>
     <group id="right" colspan="2" col="3">
         <label name="amount"/>
